# dot-bench

./: Cargo.toml  readme.md
distance-sys/: Cargo.toml  build.rs
distance-sys/src/: distance.c  distance.h  lib.rs  test.c
src/: lib.rs
