[package]
name = "dot-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
half = {version="2.4.0", features = [
    "bytemuck",
    "num-traits",
    "rand_distr",
    "serde",
] }

[dependencies]
half = {workspace = true}
multiversion = "0.7.4"
rand = "0.8.5"
simsimd = "4.1.1"
distance-sys = { path = "./distance-sys" }

[profile.bench]
opt-level = 3
lto = true

[profile.release]
opt-level = 3
lto = true
